Apply database migrations from `tyger` (#73)
